syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hex.proto";
option java_outer_classname = "TestService";

package com.hex.proto;

//定义服务(类)
service TestRpc {
    //注意：这里是returns 不是return(方法)
    rpc getData (TestRequest) returns (TestResponse) {
    }



}
//定义消息类型
message TestRequest {
    string name = 1;
}
message TestResponse {
    string message = 1;
}
